@@ -3,6 +3,7 @@ gae-wiki 1.2
 - Fixed a bug with /w/changes in open-reading wikis.
 - Fixed a the extra_styles setting.
 - Fixed misplaced Edit/History tabs.
+- Fixed viewing particular page revisions.
 - Added some caching to increase performance.
 - Added support for time zones.
 - Added a way to disable anonymous edits, but allow all logged in users.
